deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-ssl
  name: sq-event-planner
  namespace: sq-event-planner
spec:
  rules:
  - host: sq-events.sbuild.bank.swissquote.ch
    http:
      paths:
      - backend:
          serviceName: sq-event-planner
          servicePort: 80
        path: /
  tls:
  - hosts:
    - sq-events.sbuild.bank.swissquote.ch
    secretName: wildcard-sbuild-bank-swissquote-ch
